--- a/academic-helper_back/package.json
+++ b/academic-helper_back/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@elysiajs/cookie": "^0.8.0",
+    "@elysiajs/cors": "^0.8.0",
     "@elysiajs/jwt": "^0.8.0",
     "@prisma/client": "^5.8.1",
     "elysia": "latest"
